--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
