--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "naive-ui": "^2.43.1",
     "typescript": "~5.9.3",
+    "vfonts": "^0.0.3",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
     "vue-tsc": "^3.1.0"
