--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.22",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3",
     "vue-toast-notification": "^3.1.3"
   },
