--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.5.22",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3",
-    "vue-toast-notification": "^3.1.3"
+    "vue-toast-notification": "^3.1.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
